--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-
-spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce
-spring.datasource.username=rlopezb
-spring.datasource.password=password
+spring.datasource.url=jdbc:mysql://10.25.32.73:3306/ecommerce
+spring.datasource.username=root
+spring.datasource.password=ukEkaP5G
 spring.jpa.hibernate.ddl-auto=update
